--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>CaseBox - Открытие кейсов CS2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 <body>
     <!-- Header -->
@@ -145,7 +146,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
 
