--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>CaseBox - Открытие кейсов CS2</title>
+    <title>Растораст бота писал я, а это говно - нейронка</title>
     <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 <body>
@@ -149,4 +149,5 @@
     <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
+
 
