--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Растораст бота писал я, а это говно - нейронка</title>
+    <title>MintBox</title>
     <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 <body>
@@ -52,8 +52,8 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Открывай кейсы и получай скины CS2</h1>
-                <p class="hero-subtitle">Быстрый вывод, честная игра, лучшие шансы</p>
+                <h1 class="hero-title">Бота писал я</h1>
+                <p class="hero-subtitle">А этот мусор - нейронка</p>
                 <div class="hero-stats">
                     <div class="stat">
                         <div class="stat-value">125K+</div>
@@ -149,5 +149,6 @@
     <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
+
 
 
